--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,17 +1,15 @@
 .page {
-	display: grid;
-	grid-template-rows: 20px 1fr 20px;
-	align-items: center;
-	justify-items: center;
+	display: flex;
+	flex-direction: column;
+	/* grid-template-rows: 20px 1fr 20px; */
+	/* align-items: center; */
+	/* justify-items: center; */
 	min-height: 100svh;
-	padding: 80px;
+	/* padding: 80px; */
 	gap: 64px;
 	font-family: var(--font-geist-sans);
 }
 
 .main {
-	display: flex;
-	flex-direction: column;
-	gap: 32px;
-	grid-row-start: 2;
+	flex: 1;
 }
