--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,23 @@
-body {
+* {
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
+body {
+	margin: 0;
+	padding: 0;
+	font-family: inherit;
+	line-height: 1.6;
+}
+
+h1 {
+	font-weight: 700;
+}
+
+p {
+	font-weight: 400;
+}
+
 * {
 	box-sizing: border-box;
 }
