--- a/src/app/(pages)/(landing)/50discount/discountPage.module.css
+++ b/src/app/(pages)/(landing)/50discount/discountPage.module.css
@@ -32,6 +32,43 @@
 	flex-direction: column;
 	min-height: 100vh;
 }
+
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.9);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999;
+}
+.spinner {
+	width: 50px;
+	height: 50px;
+	border: 5px solid rgba(255, 255, 255, 0.3);
+	border-top: 5px solid white;
+	border-radius: 50%;
+	animation: spin 1s linear infinite;
+}
+.text {
+	color: white;
+	margin-top: 20px;
+	font-size: 18px;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
 @media (max-width: 480px) {
 	.title {
 		font-size: 30px;
