--- a/src/app/components/Dropdown/Dropdown.module.css
+++ b/src/app/components/Dropdown/Dropdown.module.css
@@ -1,4 +1,5 @@
 .dropdowns {
+	padding: 10px 15px;
 	display: flex;
 	flex-wrap: wrap;
 	gap: 32px;
@@ -38,8 +39,8 @@
 }
 
 .content {
-	overflow: hidden;
-	max-height: 0;
+	overflow: scroll;
+	max-height: 500px;
 	transition: max-height 0.3s ease, padding 0.3s ease;
 	padding: 0 15px;
 }
