--- a/src/app/(pages)/payment_delivery/paymentPage.module.css
+++ b/src/app/(pages)/payment_delivery/paymentPage.module.css
@@ -37,8 +37,13 @@
 }
 
 @media (max-width: 768px) {
+	.image {
+		width: 100%;
+		height: 100%;
+	}
 	.dropdowns {
 		flex-direction: column;
+
 		gap: 10px;
 	}
 }
