--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -18,3 +18,39 @@
 .title {
 	text-align: center;
 }
+
+.loadingContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	background-color: #f0f0f0;
+}
+
+/* Анимация загрузочного индикатора */
+.loader {
+	width: 50px;
+	height: 50px;
+	border: 5px solid #ccc;
+	border-top: 5px solid #3498db;
+	border-radius: 50%;
+	animation: spin 1s linear infinite;
+}
+
+/* Текст */
+.loadingText {
+	margin-top: 16px;
+	font-size: 18px;
+	color: #555;
+}
+
+/* Ключевые кадры для анимации */
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
