--- a/src/app/(pages)/(landing)/phone2/phonePage.module.css
+++ b/src/app/(pages)/(landing)/phone2/phonePage.module.css
@@ -23,8 +23,7 @@
 	font-size: 20px;
 }
 .sliderContainer {
-	width: 100%;
-	max-width: 1440px; /* Ограничение максимальной ширины слайдера */
+	max-width: 1220px; /* Ограничение максимальной ширины слайдера */
 	margin: 0 auto;
 	padding: 0 20px;
 }
@@ -33,30 +32,17 @@
 .slider {
 	width: 100%;
 	height: auto;
-	position: relative; /* Для корректной работы с позиционированием */
-}
-.swiper-wrapper {
-	height: 400px;
+	position: relative;
 }
 
-/* Слайды */
-.swiper-slide {
-	display: flex;
-	justify-content: center; /* Центрируем изображение по горизонтали */
-	align-items: center; /* Центрируем изображение по вертикали */
-	width: 100%; /* Слайд занимает всю доступную ширину */
-}
-
-/* Обертка для изображения */
 .slideWrapper {
 	position: relative;
-	width: 100%;
-	height: 100%; /* Слайд займет всю высоту */
 }
 
 /* Стили изображения */
 .image {
-	object-fit: cover; /* Обрезает изображение, сохраняя пропорции */
+	display: block;
+	object-fit: cover;
 	width: 100%;
 	height: 100%;
 }
