--- a/src/app/(shop)/components/InputMask/InputMask.css
+++ b/src/app/(shop)/components/InputMask/InputMask.css
@@ -15,7 +15,14 @@
 	border-radius: 8px;
 	background-color: #f9f9f9;
 	outline: none;
-	transition: border-color 0.3s ease, box-shadow 0.3s ease;
+	transition: border-color 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
+}
+
+/* Стили для отключенного состояния */
+.masked-input:disabled {
+	opacity: 0.7;
+	cursor: not-allowed;
+	background-color: #f0f0f0;
 }
 
 /* Стили для инпута с ошибкой */
