--- a/src/shared/ui/footer/footer.module.css
+++ b/src/shared/ui/footer/footer.module.css
@@ -2,6 +2,7 @@
 	padding-top: 20px;
 	padding-bottom: 20px;
 	background-color: rgb(245, 245, 245);
+	color: #000;
 }
 .container {
 	max-width: 1200px;
