--- a/src/app/(landing)/phone4/page.module.css
+++ b/src/app/(landing)/phone4/page.module.css
@@ -588,7 +588,8 @@
   }
 
   .benefits li {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
+    font-weight: bold;
     padding: 0.5rem 1rem;
     margin-bottom: 0.5rem;
   }
