--- a/src/app/(landing)/phone5/page.module.css
+++ b/src/app/(landing)/phone5/page.module.css
@@ -188,7 +188,7 @@
   gap: 2rem;
   margin-bottom: 2rem;
   padding: 1rem;
-  background: #f5f5f5;
+  background: #c7aeae;
   border-radius: 10px;
 }
 
