--- a/src/app/(landing)/bicycles/page.module.css
+++ b/src/app/(landing)/bicycles/page.module.css
@@ -1,12 +1,20 @@
 .container {
   max-width: 1260px;
   margin: 0 auto;
-  padding: 0px 20px;
+  padding: 20px 20px;
   overflow-x: hidden;
   background: #1a1a1a;
   min-height: 100vh;
+  text-align: center;
 }
 .content {
+  margin-top: 10px;
+  display: flex;
+}
+
+.subtitle {
+  font-size: 18px;
+  color: #ffd700;
 }
 
 .header {
@@ -41,12 +49,15 @@
   padding-top: 40px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 30px;
+  margin-left: 25px;
   padding: 20px;
 }
 
 .textContent {
+  margin-top: 25px;
+  margin-left: 25px;
   text-align: center;
+  flex: 1;
 }
 
 .textContent:first-child {
@@ -57,6 +68,11 @@
   margin-bottom: 20px;
   border-radius: 20px;
   overflow: hidden;
+  flex: 1;
+}
+.imageContainer img {
+  width: 100%;
+  height: auto;
 }
 
 .title {
@@ -84,8 +100,8 @@
 }
 
 .surveyText {
+  text-align: center;
   font-size: 16px;
-  margin: 20px 0;
   color: #fff;
   line-height: 1.4;
 }
@@ -127,6 +143,7 @@
 
 .advantagesList {
   color: #000;
+  text-align: left;
 }
 
 .sectionTitle {
@@ -214,7 +231,6 @@
   .container {
     padding: 0 30px;
   }
-
   .mainSection {
     padding-top: 60px;
     max-width: 720px;
@@ -239,12 +255,6 @@
   .benefits li {
     font-size: 20px;
     margin-bottom: 20px;
-  }
-
-  .surveyText {
-    font-size: 20px;
-    max-width: 600px;
-    margin: 0 auto 30px;
   }
 
   .priceButton {
@@ -317,6 +327,10 @@
   .container {
     padding: 0 40px;
   }
+  /* .content {
+    padding: 10px 0;
+    flex-direction: column;
+  } */
 
   .mainSection {
     padding-top: 80px;
@@ -349,12 +363,6 @@
     font-size: 20px;
     margin-bottom: 20px;
     justify-content: flex-start;
-  }
-
-  .surveyText {
-    font-size: 20px;
-    text-align: left;
-    margin-bottom: 30px;
   }
 
   .priceButton {
@@ -425,6 +433,10 @@
 @media (max-width: 767px) {
   .mainSection {
     padding-top: 50px;
+  }
+  .content {
+    padding: 10px 0;
+    flex-direction: column;
   }
 
   .imageContainer img,
