--- a/src/app/(shop)/components/CountdownTimer/CountdownTimer.module.css
+++ b/src/app/(shop)/components/CountdownTimer/CountdownTimer.module.css
@@ -27,13 +27,13 @@
 
 @media (max-width: 768px) {
   .timer {
-    gap: 0.5rem;
+    /* gap: 0.5rem; */
+    margin: 5px 0;
   }
 
   .timerItem {
-    font-size: 1.2rem;
-    padding: 0.8rem;
-    width: 60px;
+    font-size: 2rem;
+    padding: 1.8rem;
   }
 
   .label {
