--- a/src/app/(landing)/scooter/page.module.css
+++ b/src/app/(landing)/scooter/page.module.css
@@ -13,12 +13,12 @@
 }
 .text {
   font-size: 25px;
-  color: #ffdd59;
+  color: #fff;
 }
 
 .subtitle {
   font-size: 18px;
-  color: #ffdd59;
+  color: #fff;
 }
 
 .header {
@@ -37,7 +37,7 @@
   display: inline-block;
   animation: marquee 20s linear infinite;
   font-weight: bold;
-  color: #ffdd59;
+  color: #fff;
 }
 
 @keyframes marquee {
@@ -83,7 +83,7 @@
   font-size: 28px;
   margin: 0;
   font-weight: bold;
-  color: #ffdd59;
+  color: #fff;
   line-height: 1.2;
 }
 
@@ -91,7 +91,7 @@
   list-style: none;
   padding: 0;
   margin: 20px 0;
-  color: #ffdd59;
+  color: #fff;
 }
 
 .benefits li {
@@ -102,11 +102,15 @@
   gap: 10px;
   line-height: 1.4;
 }
+.description {
+  font-size: 16px;
+  color: #ffd700;
+}
 
 .surveyText {
   text-align: center;
   font-size: 16px;
-  color: #ffdd59;
+  color: #fff;
   line-height: 1.4;
 }
 
