--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,35 +1,44 @@
+:root {
+  --bg: #0b0b0c;
+  --card: #121215;
+  --muted: #9398a7;
+  --text: #e9ecf1;
+  --brand: #21c36a;
+  --brand-2: #2dd983;
+  --stroke: #20232b;
+}
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 body {
-	margin: 0;
-	padding: 0;
-	font-family: inherit;
-	line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  font-family: inherit;
+  line-height: 1.6;
 }
 
 h1 {
-	font-weight: 700;
+  font-weight: 700;
 }
 
 p {
-	font-weight: 400;
+  font-weight: 400;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 ul > li {
-	margin: 0;
-	padding: 0;
-	list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .no-scroll {
-	overflow: hidden;
+  overflow: hidden;
 }
