--- a/src/app/(shop)/components/ProductCard/ProductCard.module.css
+++ b/src/app/(shop)/components/ProductCard/ProductCard.module.css
@@ -19,6 +19,17 @@
   object-fit: cover;
 }
 
+.imagePlaceholder {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f5f5;
+  color: #999;
+  font-size: 14px;
+}
+
 .content {
   display: flex;
   flex-direction: column;
